# Cthul

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Cthul.cpp  Cthul.h  Player.cpp  Player.h  README.md  ResourceManager.cpp  ResourceManager.h  SDL2Wrapper.cpp  SDL2Wrapper.h  army.cpp  army.h  astar.cpp  astar.h  castle.cpp  castle.h  character.cpp  character.h  common.h  drawable.h  email.cpp  email.h  entity.h  events.cpp  events.h  input.cpp  input.h  kingdom.cpp  kingdom.h  kings.cpp  kings.h  movable.h  path.cpp  path.h  player.cpp  player.h  position.h  (+9 more)
cc3/: Chthul_Basement.FCW  Chthul_Floor 1.FCW  Chthul_blank.FCW
resources/cc3/: World.FCW
resources/data/: kingdom_astar.csv  kingdom_events.csv  kingdom_sightline.csv  setup.json
resources/entities/: entities.h  flatc.sh  human.fbs  human_generated.h
tests/: CMakeLists.txt  ResourceManagerTest.cpp  resourcemanager_test.cpp
tiled/: kings-mainmap.tmx  mapdata.tsx
